<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Enter_Your_Title"
        android:id="@+id/tvtitle"
        android:textColor="#531937"
        android:textSize="25sp"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Title"
        android:textColor="#531937"
        android:hint="@string/Enter_Your_Title"
        android:textSize="25sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Description"
        android:id="@+id/tvDescription"
        android:textColor="#531937"
        android:textSize="25sp"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Description"
        android:hint="@string/Description"
        android:textSize="25sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#531937"
        android:text="@string/Identification_Number"
        android:id="@+id/tvid"
        android:textSize="25sp"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/id"
        android:textColor="#531937"
        android:hint="@string/Identification_Number"
        android:textSize="25sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Time"
        android:textColor="#531937"
        android:id="@+id/tvtime"
        android:textSize="25sp"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Time"
        android:hint="@string/Time"
        android:textSize="25sp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Update"
        android:textSize="25sp"
        android:backgroundTint="#635767"
        android:id="@+id/customBtnUpdate"/>
</LinearLayout>